--- a/ITLibrium.Reflection/ITLibrium.Reflection.csproj
+++ b/ITLibrium.Reflection/ITLibrium.Reflection.csproj
@@ -1,4 +1,5 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
     <TargetFramework>netstandard1.0</TargetFramework>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
@@ -13,7 +14,5 @@
     <FileVersion>1.0.1</FileVersion>
     <PackageReleaseNotes>Extensions for LambdaExpression</PackageReleaseNotes>
   </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="NETStandard.Library" Version="2.0.1" />
-  </ItemGroup>
+
 </Project>
