--- a/ITLibrium.Reflection/ITLibrium.Reflection.csproj
+++ b/ITLibrium.Reflection/ITLibrium.Reflection.csproj
@@ -6,13 +6,14 @@
     <Description>Reflection helpers for C#</Description>
     <Company>ITLibrium</Company>
     <Authors>Marcin Markowski</Authors>
-    <Version>1.0.1</Version>
+    <Version>1.1.0</Version>
     <AssemblyVersion>1.0.1</AssemblyVersion>
     <PackageProjectUrl>https://github.com/itlibrium/Reflection</PackageProjectUrl>
     <RepositoryUrl>https://github.com/itlibrium/Reflection</RepositoryUrl>
     <PackageTags>.Net Core, C#, Reflection</PackageTags>
     <FileVersion>1.0.1</FileVersion>
-    <PackageReleaseNotes>Extensions for LambdaExpression</PackageReleaseNotes>
+    <PackageReleaseNotes>Getting parameters for LambdaExpression</PackageReleaseNotes>
+    <Copyright>ITLIBRIUM</Copyright>
   </PropertyGroup>
 
 </Project>
