--- a/Reflection.Tests/Reflection.Tests.csproj
+++ b/Reflection.Tests/Reflection.Tests.csproj
@@ -1,9 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <AssemblyName>ITLIBRIUM.Reflection.Tests</AssemblyName>
+
+    <RootNamespace>ITLIBRIUM.Reflection</RootNamespace>
+
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ITLibrium.Reflection\ITLibrium.Reflection.csproj" />
+    <ProjectReference Include="..\Reflection\Reflection.csproj" />
   </ItemGroup>
 
 </Project>
