new c# syntax, JetBrains.Annotations

--- a/Reflection/Reflection.csproj
+++ b/Reflection/Reflection.csproj
@@ -19,4 +19,8 @@
     <LangVersion>default</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="JetBrains.Annotations" Version="2020.1.0" />
+  </ItemGroup>
+
 </Project>
